--- a/src/app/pages/users/components/signup-request-list/details/details.component.html
+++ b/src/app/pages/users/components/signup-request-list/details/details.component.html
@@ -139,7 +139,7 @@
         <div class="modal-dialog modal-lg details-modal user-pass-modal" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">Are you sure you want to Archive Of this User - {{ rowData.fullname }}</h4>
+                    <h4 class="modal-title">Are you sure you want to Archive this User - {{ rowData.fullname }} ?</h4>
                     <button type="button" class="close" (click)="archiveUserModal.hide()" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
