Updated code for deploy 24 Jan 19:20

--- a/src/app/pages/users/components/users-archive-list/dialog/dialog.component.html
+++ b/src/app/pages/users/components/users-archive-list/dialog/dialog.component.html
@@ -16,7 +16,7 @@
                 <form novalidate>
 
                     <div class="row info">
-                        <div class="col-xs-12 col-sm-12 text-center">
+                        <div class="col-xs-12 col-sm-12 text-center margin-button8">
                             <button class="set-button" (click)="archiveUserModal.hide()">No</button>
                             <button class="btn-yes-margin33 set-button" (click)="archiveUserEvent()">Yes</button>
                         </div>
