--- a/src/app/pages/tenders/components/tenders-list/details/details.component.html
+++ b/src/app/pages/tenders/components/tenders-list/details/details.component.html
@@ -6,7 +6,7 @@
         <div class="modal-dialog modal-lg details-modal" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">Request details - {{ rowData.fullname }}</h4>
+                    <h4 class="modal-title">Request details - {{ rowData.fullname ? rowData.fullname : rowData.email }}</h4>
                     <button type="button" class="close" (click)="infoModal.hide()" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
