--- a/src/app/pages/users/components/users-list/users-list.component.html
+++ b/src/app/pages/users/components/users-list/users-list.component.html
@@ -1,7 +1,319 @@
 <div class="card-header">
     <h3>Users list</h3>
+
+    <div>
+
+        <form [formGroup]="searchFilterForm">
+            <input type="text" formControlName="email">
+            <!-- <input type="text" formControlName="role"> -->
+
+            <div class="col-xs-12 col-sm-6">
+                <label for="role" class="col-form-label">Role:</label>
+                <div>
+                    <select class="form-control" id="role" formControlName="role">
+                        <option *ngFor="let role of roles" [value]="role" >{{ role }}</option>
+                    </select>
+                </div>
+            </div>
+        </form>
+
+    </div>
     <button type="button" class="create-user btn btn-primary float-right" [routerLink]="['/users/create']"><i class="fas fa-user-plus"></i>Create new user</button>
 </div>
-<ng2-smart-table class="table table-striped" [settings]="settings" [source]="source" (editConfirm)="onEditConfirm($event)"></ng2-smart-table>
+<!-- <ng2-smart-table class="table table-striped" [settings]="settings" [source]="source" (editConfirm)="onEditConfirm($event)"></ng2-smart-table> -->
 <!-- <pagination *ngIf="totalItems > 20" class="pagination-sm" (ngModel)="page" [totalItems]="totalItems" [itemsPerPage]="itemsPerPage" [maxSize]="maxSize" [boundaryLinks]="true" [rotate]="false" (pageChanged)="pageChanged($event)" (numPages)="numPages = $event">
 </pagination> -->
+
+<div class="table-responsive">
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th class="set-cursor" *ngFor="let item of tableHeadNames; let i=index">
+                    {{item.title}}
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let item of userData | paginate: { itemsPerPage: 20, currentPage: page, totalItems: totalItems }">
+                <td>{{item?.id}}</td>
+                <td>{{item?.email }}</td>
+                <td>{{item?.profile_type ? item?.profile_type[0] : '--'}}</td>
+                <td>{{item?.role}}</td>
+                <td>
+                    <div class="dropdown">
+                        <button class="dropbtn"><i class="fas fa-cog"></i></button>
+                        <div class="dropdown-content">
+                            <a (click)="openModal(infoModal, item)">Details</a>
+                            <a [routerLink]="['/users',item.id, 'edit']">Edit</a>
+                            <a (click)="openModal(resetPasswordModal, item)">Reset Password</a>
+                            <a (click)="uploadToOrbidal=false; openModal(uploadResultsModal, item)">Upload Results</a>
+                            <a (click)="uploadToOrbidal=true; openModal(uploadResultsModal, item)">Upload To Orbidal</a>
+                            <a (click)="this.openModal(userStatisticsModal, item); getUserSessions('')">User Statistics</a>
+                            <a (click)="openModal(archiveUserModal, item)">Archive User</a>
+                        </div>
+                    </div>
+                </td>
+            </tr>
+        </tbody>
+        <span *ngIf="userData?.length === 0">No Data Found!</span>
+
+    </table>
+</div>
+
+<div class="marketplace-pagi-holder" *ngIf="totalItems>0">
+    <pagination-controls (pageChange)="pageChanged($event)" maxSize="5" previousLabel="Previous" nextLabel="Next" screenReaderCurrentLabel="You're on page">
+    </pagination-controls>
+</div>
+
+<!-- Modal for User Details -->
+<ng-template #infoModal>
+    <div class="modal-header">
+
+        <h4 class="modal-title">User details - <span *ngIf="!rowData?.full_name">{{ rowData.email }}</span>
+            <span *ngIf="rowData.full_name">{{ rowData.full_name }}</span>
+        </h4>
+
+        <button class="close" type="button" [routerLink]="['/users',rowData.id, 'edit']" aria-label="Close">
+                        <i class="fas fa-edit"></i>
+                    </button>
+
+        <button class="close" (click)="approveModal.hide()" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+
+    </div>
+
+    <div class="modal-body" [ngClass]="{'row': rowData.fullname }">
+        <label *ngIf="!rowData.fullname">Profile Details hasn't been created yet, please use edit feature
+                        and add them.
+                    </label>
+
+        <div [ngClass]="(request == 'countries') ? 'col-xs-12 padding15': 'col-xs-12 col-sm-6 col-md-4 col-lg-3'" *ngFor="let request of reqData">
+            <label class="main-label">{{ request }}</label>
+            <div class="info" *ngIf="request != 'countries' && request != 'contacts' && request != 'keywords'">
+                <span>{{ rowData[request] }} </span>
+                <span *ngIf="request === 'industry'">{{ rowData[request].name }} </span>
+                <!-- <span *ngIf="request!=='profile_type'"><input [value]="rowData[request]"> </span>
+                            <span *ngIf="request==='profile_type'">
+                                    <ng-select [items]="profileType"
+                                    bindLabel="name"
+                                    bindValue="name" multiple="true"
+                                    [(ngModel)]="rowData[request]">
+                         </ng-select>
+                                
+                            </span> -->
+            </div>
+            <div class="row info" *ngIf="request == 'country'">
+                <div class="col-xs-12 col-sm-6"><span><label>Code: </label></span>
+                    <span>{{rowData[request].code}}</span>
+                </div>
+                <div class="col-xs-12 col-sm-6"><span><label>Number:
+                                    </label></span><span>{{rowData[request].number}}</span></div>
+                <div class="col-xs-12 col-sm-6"><span><label>alpha2code:
+                                    </label></span><span>{{rowData[request].alpha2code}}</span></div>
+                <div class="col-xs-12 col-sm-6"><span><label>alpha3code:
+                                    </label></span><span>{{rowData[request].alpha3code}}</span></div>
+                <div class="col-xs-12 col-sm-6"><span><label>Name:
+                                    </label></span><span>{{rowData[request].name}}</span></div>
+                <div class="col-xs-12 col-sm-6"><span><label>World Region:
+                                    </label></span><span>{{rowData[request].world_region}}</span></div>
+                <div class="col-xs-12 col-sm-6"><span><label>World Region:
+                                    </label></span><span>{{rowData[request].world_region}}</span></div>
+                <div class="col-xs-12 col-sm-6"><span><label>World Subregion:
+                                    </label></span><span>{{rowData[request].world_subregion}}</span></div>
+                <div class="col-xs-12 col-sm-6"><span><label>Other Names:
+                                    </label></span><span>{{rowData[request].other_names}}</span></div>
+                <div class="col-xs-12 col-sm-6"><span><label>Currency ID:
+                                    </label></span><span>{{rowData[request].currency_id}}</span></div>
+                <div class="col-xs-12 col-sm-6"><span><label>World region ID:
+                                    </label></span><span>{{rowData[request].world_region_id}}</span></div>
+            </div>
+
+            <div class="row info" *ngIf="request == 'contacts'">
+                <div class="col-xs-12 col-sm-12"><span><label>{{rowData[request][0].contact_type}}:
+                                    </label></span><span>{{rowData[request][0].value}}</span></div>
+            </div>
+
+            <div class="row info" *ngIf="request == 'keywords' && rowData[request].length>0">
+                <div class="col-xs-12 col-sm-12"><span><label>Name:
+                                    </label></span><span>{{rowData[request][0].name}}</span></div>
+            </div>
+        </div>
+    </div>
+</ng-template>
+
+<!--For reset password... -->
+<ng-template #resetPasswordModal>
+    <div class="modal-header">
+        <h4 class="modal-title">Reset Password Of User - {{ rowData.fullname ? rowData.fullname : rowData.email }}</h4>
+        <button type="button" class="close" (click)="approveModal.hide()" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+    </div>
+    <form [formGroup]="resetPasswordForm" novalidate>
+        <div class="row info">
+
+            <div class="col-xs-12 col-sm-6 form-group">
+                <label>New Password</label>
+                <input type="password" (input)="matchPassword('new')" formControlName="password">
+                <span *ngIf="resetPasswordForm.controls['password'].value && resetPasswordForm.controls['password'].value.length<6">
+                                Password Length should be 6.
+                            </span>
+            </div>
+
+            <div class="col-xs-12 col-sm-6 form-group">
+                <label>Confirm Password</label>
+                <input type="password" [ngClass]="{'input-validation': matchedPassword === false}" (input)="matchPassword('confirm')" formControlName="password_confirmation">
+                <span class="label label-danger matched-password" *ngIf="matchedPassword === false">Password
+                                Not Matched!</span>
+                <span *ngIf="resetPasswordForm.controls['password_confirmation'].value && resetPasswordForm.controls['password_confirmation'].value.length<6">
+                                Password Length should be 6.
+                            </span>
+            </div>
+
+        </div>
+
+        <div class="row info">
+            <div class="col-xs-12 col-sm-6">
+                <button [disabled]="!resetPasswordForm.valid || !matchedPassword" (click)="changePassword()">Change</button>
+            </div>
+        </div>
+    </form>
+</ng-template>
+
+<!-- Modal for Upload Results -->
+
+
+<ng-template #uploadResultsModal>
+
+    <div class="modal-header">
+
+        <h4 *ngIf="!uploadToOrbidal" class="modal-title">Upload Results -
+            <div class="email-name-holder">
+
+                <span>{{ rowData.fullname ? rowData.fullname : rowData.email }}
+                                </span> <span *ngIf="rowData.fullname">(</span>
+                <span *ngIf="rowData.fullname">{{rowDataObj.email}}</span> <span *ngIf="rowData.fullname">)</span>
+
+            </div>
+        </h4>
+
+        <h4 *ngIf="uploadToOrbidal" class="modal-title">Upload to Orbidal -
+            <div class="email-name-holder">
+                <span>{{ rowData.fullname ? rowData.fullname : rowData.email }}
+                            </span> <span *ngIf="rowData.fullname">(</span>
+                <span *ngIf="rowData.fullname">{{rowDataObj.email}}</span> <span *ngIf="rowData.fullname">)</span>
+
+
+            </div>
+        </h4>
+
+        <button type="button" *ngIf="selectFile" class="close" (click)="fileToUpload = null; selectFile.value=''; approveModal.hide()" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+    </div>
+    <div class="modal-body">
+        <label for="file">Choose File</label>
+        <input *ngIf="!uploadToOrbidal" #selectFile type="file" id="file" accept=".csv, .xlsx, .xls" (change)="handleFileInput($event.target.files)">
+        <input *ngIf="uploadToOrbidal" #selectFile type="file" id="file" accept=".xls,.xlsx, .jpg, .jpeg, .png, .pdf, .csv, .doc, .docx, .pptx, .ppt" (change)="handleFileInput($event.target.files)">
+    </div>
+    <div class="model-body">
+        <p class="this-is-CSV" *ngIf="!uploadToOrbidal && !thisIsCSV">Please Upload type CSV, XLS and XLSX only file </p>
+        <p class="this-is-CSV" *ngIf="uploadToOrbidal && !thisIsCSV">Please Upload type XLS, XLSX, JPG, JPEG, PNG, PDF, CSV, DOC, DOCX, PPTX, PPT only file </p>
+        <p class="this-is-CSV" *ngIf="!underFileSize">File Size must be under 20MB </p>
+        <p class="upload-file-loading" *ngIf="uploadFileLoading">Please Wait... </p>
+    </div>
+    <div class="modal-body">
+
+        <div class="upload-btn-holder">
+            <button class="create-user btn btn-primary upload" [ngClass]="{'upload-disable': !fileToUpload}" [disabled]="!fileToUpload" (click)="uploadFile()">Upload File</button>
+        </div>
+
+    </div>
+
+</ng-template>
+
+<!-- Modal for User Statistics -->
+
+<ng-template #userStatisticsModal>
+
+
+    <div class="modal-header">
+        <h4 class="modal-title">User Statistics - <span *ngIf="!rowData.fullname">{{ rowDataObj.email }}</span>
+            <span *ngIf="rowData.fullname">{{ rowData.fullname }}</span></h4>
+        <button type="button" class="close" (click)="approveModal.hide()" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+    </div>
+
+    <div class="modal-body" [ngClass]="{'row': rowData.fullname }">
+        <!-- {{statisticFilterForm?.controls['filter'].value}} -->
+        <form [formGroup]="statisticFilterForm" class="static_form-holder" novalidate>
+
+            <!-- <input type="radio" id="all" name="filter" value="all" formControlName="filter"> <label for="all">ALL</label><br>
+                        <input type="radio" id="30days" name="filter" value="30days" formControlName="filter"><label for="30days">Past 30 Days</label> <br> -->
+            <!-- <input type="radio" id="all" name=filter formControlName="filter" value="all" > <label for="all">ALL</label>
+                        <input type="radio" id="30days" name=filter formControlName="filter" value="30days"> <label for="30days">Past 30 Days</label> -->
+
+            <div class="form-group">
+                <input class="custom-radio" type="radio" [id]="'all'+rowDataObj.id" name="filter" formControlName="filter" value="">
+                <label [for]="'all'+rowDataObj.id">
+                                <span></span> ALL
+                            </label>
+            </div>
+            <div class="form-group">
+                <input class="custom-radio" type="radio" [id]="'days'+rowDataObj.id" name="filter" formControlName="filter" value="30">
+                <label [for]="'days'+rowDataObj.id">
+                                <span></span> Past 30 Days
+                            </label>
+            </div>
+
+        </form>
+        <div class="row">
+
+            <div class="pull-left col-sm-12">
+                <div class="row">
+                    <ng-container *ngFor="let item of userStatisticsData">
+                        <div [ngClass]="'col-xs-12 padding15'" class="col-sm-3" *ngIf="item.key!=='user_id'">
+                            <label class="main-label">{{ item.key === 'created_at'?'Origin Date': replaceUnderscore(item.key) }}</label>
+                            <div class="info">
+                                <span *ngIf="item.key === 'created_at'">{{ item.value | date: 'dd/MM/yyyy' }}
+                                            </span>
+                                <span *ngIf="item.key !== 'created_at'">{{ item.value }} </span>
+                            </div>
+                        </div>
+                    </ng-container>
+
+                </div>
+            </div>
+
+            <!-- <div class="pull-left col-sm-6">
+                            <highcharts-chart [Highcharts]="highcharts" [options]="chartOptions"
+                                style="width: 100%; height: 400px; display: block;">
+                            </highcharts-chart>
+                        </div> -->
+
+        </div>
+    </div>
+
+</ng-template>
+
+<!-- Modal for Archive user -->
+<ng-template #archiveUserModal>
+
+    <div class="modal-header">
+        <h4 class="modal-title">Are you sure you want to Archive this User - {{ rowData.fullname ? rowData.fullname :rowData.email }} ?</h4>
+        <button type="button" class="close" (click)="approveModal.hide()" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+    </div>
+    <form novalidate>
+
+        <div class="row info">
+            <div class="col-xs-12 col-sm-12 text-center">
+                <button (click)="approveModal.hide()">No</button>
+                <button class="btn-yes-margin33" (click)="archiveUserEvent()">Yes</button>
+            </div>
+        </div>
+    </form>
+</ng-template>
