--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -362,3 +362,66 @@ tag:not(.readonly):not(.tag--editing):focus {
 .marketplace-pagi-holder .ngx-pagination li.small-screen {
   display: none;
 }
+
+
+
+
+
+
+// 
+
+
+.user-details-modal2 {
+  max-width: 80%;
+  .modal-header{
+      font-weight: bold;
+      text-transform: uppercase;
+      background-color: #d66166;
+      color: #fff;
+      .close{
+        font-weight: 700;
+    line-height: 1;
+    color: #fff;
+    text-shadow: unset;
+    opacity: 1;
+      }
+      .modal-header .close {
+        padding: 0;
+        margin: 0;
+    }
+  }
+  .modal-body {
+      .main-label{
+          font-size: 14px;
+          width: 100%;
+          text-transform: capitalize;
+          margin-top: 15px;
+          background: #d66166;
+          color: #fff;
+          padding: 2px 15px;
+          margin-bottom: 0;
+      }
+      .info {
+          background: #ecf0f5;
+          padding: 10px 15px;
+          margin: 0;
+          word-break: break-all;
+      }
+  }
+}
+a{
+  display: inline-block;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.modal-details{
+  .btn{
+      height: 30px;
+      font-size: 13px;
+      color: grey;
+      &:hover{
+          color: #fff;
+      }
+  }
+}
