--- a/src/app/pages/users/components/user-statistics/user-statistics.component.html
+++ b/src/app/pages/users/components/user-statistics/user-statistics.component.html
@@ -10,12 +10,12 @@
     <div class="com-tndr-formhldr">
 
         <form [formGroup]="statisticFilterForm" novalidate>
-
-            <div class="row col-md-4">
+            <div class="row top-bar">
+            <div class="col-md-5">
                 <input type="text" formControlName="search_text" (input)="page=1" placeholder="Search by username/email" class="form-control">
             </div>
 
-            <div class="row col-md-4">
+            <div class="col-md-5">
                 <!-- <label for="days" class="col-form-label">Days:</label> -->
                 <select class="form-control" id="days" formControlName="days">
                     <option value="all">All Days</option >
@@ -33,8 +33,8 @@
                 <label for="30days" class="radio-label">Past 30 Days</label>
             </div> -->
 
-            <button (click)="ngOnInit()" class="btn btn-primary">Reset</button>
-
+           <div class="col-md-2"> <button (click)="ngOnInit()" class="btn btn-primary">Reset</button></div>
+        </div>
         </form>
     </div>
 
