--- a/src/app/pages/users/components/users-list/users-list.component.html
+++ b/src/app/pages/users/components/users-list/users-list.component.html
@@ -1,16 +1,16 @@
 <div class="card-header">
     <h3>Users list</h3>
 
-    
 
-        <form [formGroup]="searchFilterForm">
-            <div class="row">
+
+    <form [formGroup]="searchFilterForm">
+        <div class="row">
 
             <div class="col-sm-5">
                 <label for="role" class="col-form-label">Email:</label>
                 <div>
                     <input type="text" formControlName="email">
-            <!-- <input type="text" formControlName="role"> -->
+                    <!-- <input type="text" formControlName="role"> -->
                 </div>
             </div>
 
@@ -26,7 +26,7 @@
                 <label for="role" class="col-form-label">&nbsp;</label>
                 <button type="button" class="create-user btn btn-primary float-right" [routerLink]="['/users/create']"><i class="fas fa-user-plus"></i>Create new user</button></div>
         </div>
-        </form>
+    </form>
 </div>
 <!-- <ng2-smart-table class="table table-striped" [settings]="settings" [source]="source" (editConfirm)="onEditConfirm($event)"></ng2-smart-table> -->
 <!-- <pagination *ngIf="totalItems > 20" class="pagination-sm" (ngModel)="page" [totalItems]="totalItems" [itemsPerPage]="itemsPerPage" [maxSize]="maxSize" [boundaryLinks]="true" [rotate]="false" (pageChanged)="pageChanged($event)" (numPages)="numPages = $event">
@@ -96,13 +96,13 @@
         <label *ngIf="!rowData.fullname">Profile Details hasn't been created yet, please use edit feature
                         and add them.
                     </label>
-
-        <div [ngClass]="(request == 'countries') ? 'col-xs-12 padding15': 'col-xs-12 col-sm-6 col-md-4 col-lg-3'" *ngFor="let request of reqData">
-            <label class="main-label">{{ request }}</label>
-            <div class="info" *ngIf="request != 'countries' && request != 'contacts' && request != 'keywords'">
-                <span>{{ rowData[request] }} </span>
-                <span *ngIf="request === 'industry'">{{ rowData[request].name }} </span>
-                <!-- <span *ngIf="request!=='profile_type'"><input [value]="rowData[request]"> </span>
+        <ng-container *ngFor="let request of reqData">
+            <div *ngIf="request != 'id' && request != 'industries' && request !='avatar' && request != 'contacts' && request !== 'cover_img' && request != 'countries' && request != 'keywords' && rowData[request] && rowData[request] !==''" [ngClass]="(request == 'countries') ? 'col-xs-12 padding15': 'col-xs-12 col-sm-6 col-md-4 col-lg-3' + request">
+                <label class="main-label">{{ request }}</label>
+                <div class="info">
+                    <span>{{ rowData[request] }} </span>
+                    <span *ngIf="request === 'industry' && rowData[request]">{{ rowData[request].name }} </span>
+                    <!-- <span *ngIf="request!=='profile_type'"><input [value]="rowData[request]"> </span>
                             <span *ngIf="request==='profile_type'">
                                     <ng-select [items]="profileType"
                                     bindLabel="name"
@@ -111,43 +111,45 @@
                          </ng-select>
                                 
                             </span> -->
-            </div>
-            <div class="row info" *ngIf="request == 'country'">
-                <div class="col-xs-12 col-sm-6"><span><label>Code: </label></span>
-                    <span>{{rowData[request].code}}</span>
                 </div>
-                <div class="col-xs-12 col-sm-6"><span><label>Number:
+                <div class="row info" *ngIf="request === 'country' && rowData[request]">
+                    {{request}}
+                    <div class="col-xs-12 col-sm-6"><span><label>Code: </label></span>
+                        <span>{{rowData[request].code}}</span>
+                    </div>
+                    <div class="col-xs-12 col-sm-6"><span><label>Number:
                                     </label></span><span>{{rowData[request].number}}</span></div>
-                <div class="col-xs-12 col-sm-6"><span><label>alpha2code:
+                    <div class="col-xs-12 col-sm-6"><span><label>alpha2code:
                                     </label></span><span>{{rowData[request].alpha2code}}</span></div>
-                <div class="col-xs-12 col-sm-6"><span><label>alpha3code:
+                    <div class="col-xs-12 col-sm-6"><span><label>alpha3code:
                                     </label></span><span>{{rowData[request].alpha3code}}</span></div>
-                <div class="col-xs-12 col-sm-6"><span><label>Name:
+                    <div class="col-xs-12 col-sm-6"><span><label>Name:
                                     </label></span><span>{{rowData[request].name}}</span></div>
-                <div class="col-xs-12 col-sm-6"><span><label>World Region:
+                    <div class="col-xs-12 col-sm-6"><span><label>World Region:
                                     </label></span><span>{{rowData[request].world_region}}</span></div>
-                <div class="col-xs-12 col-sm-6"><span><label>World Region:
+                    <div class="col-xs-12 col-sm-6"><span><label>World Region:
                                     </label></span><span>{{rowData[request].world_region}}</span></div>
-                <div class="col-xs-12 col-sm-6"><span><label>World Subregion:
+                    <div class="col-xs-12 col-sm-6"><span><label>World Subregion:
                                     </label></span><span>{{rowData[request].world_subregion}}</span></div>
-                <div class="col-xs-12 col-sm-6"><span><label>Other Names:
+                    <div class="col-xs-12 col-sm-6"><span><label>Other Names:
                                     </label></span><span>{{rowData[request].other_names}}</span></div>
-                <div class="col-xs-12 col-sm-6"><span><label>Currency ID:
+                    <div class="col-xs-12 col-sm-6"><span><label>Currency ID:
                                     </label></span><span>{{rowData[request].currency_id}}</span></div>
-                <div class="col-xs-12 col-sm-6"><span><label>World region ID:
+                    <div class="col-xs-12 col-sm-6"><span><label>World region ID:
                                     </label></span><span>{{rowData[request].world_region_id}}</span></div>
-            </div>
+                </div>
 
-            <div class="row info" *ngIf="request == 'contacts'">
-                <div class="col-xs-12 col-sm-12"><span><label>{{rowData[request][0].contact_type}}:
+                <div class="row info" *ngIf="request == 'contacts' && rowData[request].length>0">
+                    <div class="col-xs-12 col-sm-12"><span><label>{{rowData[request][0].contact_type}}:
                                     </label></span><span>{{rowData[request][0].value}}</span></div>
-            </div>
+                </div>
 
-            <div class="row info" *ngIf="request == 'keywords' && rowData[request].length>0">
-                <div class="col-xs-12 col-sm-12"><span><label>Name:
+                <div class="row info" *ngIf="request == 'keywords' && rowData[request].length>0">
+                    <div class="col-xs-12 col-sm-12"><span><label>Name:
                                     </label></span><span>{{rowData[request][0].name}}</span></div>
+                </div>
             </div>
-        </div>
+        </ng-container>
     </div>
 </ng-template>
 
@@ -193,7 +195,7 @@
             <div class="col-xs-12 col-sm-6 form-group">
                 <label>New Password</label>
                 <input type="password" (input)="matchPassword('new')" formControlName="password">
-                <span *ngIf="resetPasswordForm.controls['password'].value && resetPasswordForm.controls['password'].value.length<6">
+                <span class="matched-password" *ngIf="resetPasswordForm.controls['password'].value && resetPasswordForm.controls['password'].value.length<6">
                                 Password Length should be 6.
                             </span>
             </div>
@@ -203,7 +205,7 @@
                 <input type="password" [ngClass]="{'input-validation': matchedPassword === false}" (input)="matchPassword('confirm')" formControlName="password_confirmation">
                 <span class="label label-danger matched-password" *ngIf="matchedPassword === false">Password
                                 Not Matched!</span>
-                <span *ngIf="resetPasswordForm.controls['password_confirmation'].value && resetPasswordForm.controls['password_confirmation'].value.length<6">
+                <span class="matched-password" *ngIf="resetPasswordForm.controls['password_confirmation'].value && resetPasswordForm.controls['password_confirmation'].value.length<6">
                                 Password Length should be 6.
                             </span>
             </div>
@@ -245,7 +247,7 @@
             </div>
         </h4>
 
-        <button type="button" *ngIf="selectFile" class="close" (click)="fileToUpload = null; selectFile.value=''; approveModal.hide()" aria-label="Close">
+        <button type="button" class="close" (click)="approveModal.hide()" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
     </div>
@@ -284,25 +286,18 @@
     </div>
 
     <div class="modal-body" [ngClass]="{'row': rowData.fullname }">
-        <!-- {{statisticFilterForm?.controls['filter'].value}} -->
         <form [formGroup]="statisticFilterForm" class="static_form-holder" novalidate>
 
-            <!-- <input type="radio" id="all" name="filter" value="all" formControlName="filter"> <label for="all">ALL</label><br>
-                        <input type="radio" id="30days" name="filter" value="30days" formControlName="filter"><label for="30days">Past 30 Days</label> <br> -->
-            <!-- <input type="radio" id="all" name=filter formControlName="filter" value="all" > <label for="all">ALL</label>
-                        <input type="radio" id="30days" name=filter formControlName="filter" value="30days"> <label for="30days">Past 30 Days</label> -->
+            <div class="row">
 
-            <div class="form-group">
-                <input class="custom-radio" type="radio" [id]="'all'+rowDataObj.id" name="filter" formControlName="filter" value="">
-                <label [for]="'all'+rowDataObj.id">
-                                <span></span> ALL
-                            </label>
-            </div>
-            <div class="form-group">
-                <input class="custom-radio" type="radio" [id]="'days'+rowDataObj.id" name="filter" formControlName="filter" value="30">
-                <label [for]="'days'+rowDataObj.id">
-                                <span></span> Past 30 Days
-                            </label>
+                <div class="col-xs-12 col-sm-12">
+                    <select class="form-control" formControlName="filter">
+                            <option value="">All days</option>
+                            <option value="30">Past 30 Days</option>
+                            <option value="60">Past 60 Days</option>
+                            <option value="90">Past 90 Days</option>
+                        </select>
+                </div>
             </div>
 
         </form>
@@ -323,12 +318,6 @@
 
                 </div>
             </div>
-
-            <!-- <div class="pull-left col-sm-6">
-                            <highcharts-chart [Highcharts]="highcharts" [options]="chartOptions"
-                                style="width: 100%; height: 400px; display: block;">
-                            </highcharts-chart>
-                        </div> -->
 
         </div>
     </div>
