--- a/src/app/pages/users/components/users-list/users-list.component.scss
+++ b/src/app/pages/users/components/users-list/users-list.component.scss
@@ -5,7 +5,6 @@
             width: 100%;
             border-radius: 4px;
             padding: 6px 0;
-        
             i {
                 margin-right: 4px;
                 font-size: 10px;
@@ -15,20 +14,19 @@
     input.ng-valid {
         width: 100%;
         border-radius: 4px;
-        border:1px solid #ccc;
+        border: 1px solid #ccc;
         font-size: 13px;
-        padding: 7px 10px; outline: none;
+        padding: 7px 10px;
+        outline: none;
     }
-    input.ng-valid:focus{border-color: #d66166;}
-    .ng-select-container:hover{border-color: #d66166;}
+    input.ng-valid:focus {
+        border-color: #d66166;
+    }
+    .ng-select-container:hover {
+        border-color: #d66166;
+    }
 }
 
 .modal-dialog {
     max-width: 80%;
 }
-
-
-
-
-
-
