--- a/src/app/pages/users/components/rating-request/rating-request.component.html
+++ b/src/app/pages/users/components/rating-request/rating-request.component.html
@@ -3,9 +3,9 @@
   <!-- For filter -->
   <div class="com-tndr-formhldr">
 
-    <form novalidate>
+    <form class=" row" novalidate>
 
-      <div class="row col-md-4">
+      <div class="col-md-4">
         <input type="text" (input)="page=1" placeholder="Search by username/email" class="form-control">
       </div>
 
